# Enigame

./: CMakeLists.txt
src/: AssetManager.cpp  AssetManager.h  Entity.cpp  Entity.h  Game.cpp  Game.h  InputManager.cpp  InputManager.h  IntroScene.cpp  IntroScene.h  LoadingScene.cpp  LoadingScene.h  Renderer.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Utils.cpp  Utils.h
